# naocrawl

./: CMakeLists.txt  main.cpp  qiproject.xml
build-remote_toolchain/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  qitest.cmake
build-remote_toolchain/sdk/: qitest.json
build-remote_toolchain/sdk/share/qi/: path.conf
build-sys-linux-x86_64/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  qitest.cmake
build-sys-linux-x86_64/sdk/: qitest.json
build-sys-linux-x86_64/sdk/share/qi/: path.conf
include/: naopp.hpp
src/: naopp.cpp
